{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "bcc0db6a-c1d1-4ec2-9fbb-f14737c751d6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b532ef46-3eac-4128-a07b-05a43bed4e84",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "76b82e1b-9848-4473-9f38-24c59396319a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b351054d-daa6-4e12-bd55-12530dd24fb9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "079ccac5-42d7-423a-a017-c66f0f04b58b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}